chore: add Maven Surefire plugin dep